feat: implement v0.1.0 with performance, UX improvements and statistics dashboard
- Performance & Reliability:
  - Add incremental scanning with file hash caching
  - Implement debouncing for file change events
  - Add progress indicator during large scans
  - Improve error handling with retry mechanism
  - Add comprehensive error reporting

- User Experience:
  - Add filtering by keyword type and text search
  - Implement enhanced tree view with grouping options
  - Add context menu actions (mark as done, copy, reveal)
  - Support grouping by type or by file
  - Add sort options (by file, type, line)
  - Show TODO count in root node

- Configuration:
  - Add configurable exclude patterns
  - Add maximum file size setting
  - Add refresh interval configuration
  - Add auto-scan on save toggle
  - Add group by type and sort order settings

- Statistics Dashboard:
  - Add status bar integration with TODO count
  - Implement statistics dashboard with breakdown by type and file
  - Add most TODO-heavy files list with medals
  - Add trend analysis (comparison with previous scan)
  - Create webview panel with formatted statistics

- Multi-language Support:
  - Enhanced exclude patterns for multiple programming languages
  - Support for JS/TS, Python, Java, Rust, C#/.NET, PHP, iOS/macOS

- Documentation:
  - Update README with comprehensive roadmap
  - Mark completed features in roadmap
  - Add verification script

Version: 0.1.0

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -9,3 +9,12 @@ vsc-extension-quickstart.md
 **/*.map
 examples/**
 IMPROVEMENTS.md
+node_modules/**
+CONTRIBUTING.md
+verify.js
+*.vsix
+.git/**
+.gitignore
+package-lock.json
+*.log
+.DS_Store
